force-app/main/default/objects/API_Error__c/API_Error__c.object-meta.xml
<CustomObject>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>API Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>