force-app/main/default/objects/API_Error__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>Stores the action that is triggering the Error.  This field value should give admins an easier way to determine where the error occurred.</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>End_Point__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Create Application</fullName>
            </value>
            <value>
                <fullName>Resubmit Application</fullName>
            </value>
            <value>
                <fullName>Get Questions</fullName>
            </value>
            <value>
                <fullName>Submit Answers</fullName>
            </value>
            <value>
                <fullName>MegaSys Service</fullName>
            </value>
            <value>
                <fullName>MegaSys Login</fullName>
            </value>
            <value>
                <fullName>VersaPay Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>