force-app/main/default/objects/API_Error__c/fields/App_FirstName_LastName__c.field-meta.xml
<CustomField>
    <fullName>App_FirstName_LastName__c</fullName>
    <formula>Application__r.First_Name__c &amp; &quot; &quot; &amp; Application__r.Last_Name__c</formula>
    <label>App FirstName LastName</label>
    <type>Text</type>
</CustomField>