force-app/main/default/objects/API_Error__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCoD</fullName>
            </value>
            <value>
                <fullName>TransUnion</fullName>
            </value>
            <value>
                <fullName>MegaSys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>