force-app/main/default/objects/API_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action__c</columns>
    <columns>Application__c</columns>
    <columns>End_Point__c</columns>
    <columns>Error__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>