force-app/main/default/objects/API_Error__c/listViews/Megasys_Errors.listView-meta.xml
<ListView>
    <fullName>Megasys_Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action__c</columns>
    <columns>App_FirstName_LastName__c</columns>
    <columns>Application__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Point__c</field>
        <operation>contains</operation>
        <value>Megasys</value>
    </filters>
    <label>Megasys Errors</label>
</ListView>