force-app/main/default/objects/API_Error__c/listViews/Transunion_Auth_Errors.listView-meta.xml
<ListView>
    <fullName>Transunion_Auth_Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action__c</columns>
    <columns>App_FirstName_LastName__c</columns>
    <columns>Application__c</columns>
    <columns>Error__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Point__c</field>
        <operation>contains</operation>
        <value>TransUnion</value>
    </filters>
    <label>TransUnion Authentication Errors</label>
</ListView>